# sentiric-task-service

./: .env.docker  .env.example  .gitignore  DEMO.md  Dockerfile  LOGIC.md  README.md  TASKS.md  docker-compose.service.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/core/: celery_app.py  config.py  logging.py
app/tasks/: example_tasks.py  guardian_tasks.py
